# RTv1

./: .gitignore  CMakeLists.txt  Makefile  README.md  SDL_built.sh  author  cleanup.c  errors.c  logs.logs  logs2.logs  main.c  rtv1.h  scene_init.c  texture.c  vectors.c
SDL/lib/: libSDL2-2.0.0.dylib  libSDL2_image.la  libSDL2_ttf-2.0.0.dylib  libSDL2_ttf.la  libSDL2main.la
SDL/lib/cmake/SDL2/: sdl2-config.cmake
SDL/lib/pkgconfig/: SDL2_image.pc  SDL2_ttf.pc  sdl2.pc
SDL2_image-2.0.5/: Makefile  config.status  libSDL2_image.la  libtool  showimage
SDL2_image-2.0.5/.deps/: IMG.Plo  IMG_ImageIO.Plo  IMG_bmp.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_svg.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
SDL2_image-2.0.5/.libs/: libSDL2_image-2.0.0.dylib  showimage
SDL2_image-2.0.5/.libs/libSDL2_image-2.0.0.dylib.dSYM/Contents/Resources/DWARF/: libSDL2_image-2.0.0.dylib
SDL2_ttf-2.0.15/: Makefile  config.status  glfont  libSDL2_ttf.la  libtool  showfont
SDL2_ttf-2.0.15/.deps/: SDL_ttf.Plo  glfont.Po  showfont.Po
SDL2_ttf-2.0.15/.libs/: glfont  showfont
SDL2_ttf-2.0.15/.libs/libSDL2_ttf-2.0.0.dylib.dSYM/Contents/Resources/DWARF/: libSDL2_ttf-2.0.0.dylib
include/: colors.h  ini_parser.h  rtv1.h
ini_parser/: cleanup_ini_blocks.c  error_parser.c  ini_parser.c  ini_parser.h
ini_parser/tests/: 3_right_one_wrong.ini  3_shapes.ini  cylinder.ini  ellipsoid.ini  main.c  sphere.ini
libft/: Makefile  ft_strjoin.c  ft_strjoinfree.c  libft.h
libft/include/: libft.h
libft/source/: ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_cl.c  ft_count_mass.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+25 more)
source/: CL.c  camera.c  cleanup.c  color.c  control_utils.c  errors.c  gui_light.c  gui_sphere.c  gui_utils.c  init.c  light.c  main.c  parsing.c  rotations.c  rt.cl  shape.c  sphere.c  texture.c  utils.c  vectors.c  vectors_2.c
source/gui/: gui_cone.c  gui_light.c  gui_shape_btns.c  gui_sphere.c  gui_utils.c  gui_utils_2.c
source/ini_parser/: cleanup_ini_blocks.c  error_parser.c  ini_parser.c  parser_utils.c
tests/: 2_spheres.ini  3_right_one_wrong.ini  3_shapes.ini  GameUserSettings.ini  another_cylinder.ini  camera1.ini  cone.ini  cylinder.ini  ellipsoid.ini  light1.ini  light2.ini  plane.ini  sphere.ini
